salesforce_sfdx/main/default/objects/Activity/fields/OSFMX_Mediodecontacto__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Mediodecontacto__c</fullName>
    <defaultValue>("Ingresar Valor")</defaultValue>
    <label>Medio de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Email</fullName>
            </value>
            <value>
                <fullName>Llamada/conferencia</fullName>
            </value>
            <value>
                <fullName>Reunión presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>