salesforce_sfdx/main/default/objects/Activity/fields/OSFPE_fld_casos__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_casos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adicional: Casos</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>