salesforce_sfdx/main/default/objects/Activity/fields/OSFPE_fld_empresa__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_empresa__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Adicional: Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>