salesforce_sfdx/main/default/objects/Activity/fields/OSFPE_fld_especialidad__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_especialidad__c</fullName>
    <label>Especialidad</label>
    <length>250</length>
    <type>Text</type>
</CustomField>