salesforce_sfdx/main/default/objects/Activity/fields/OSFPE_fld_estadoEvento__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_estadoEvento__c</fullName>
    <label>Estado Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Programado</fullName>
            </value>
            <value>
                <fullName>Ejecutado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>