salesforce_sfdx/main/default/objects/Activity/fields/OSFPE_fld_ingenieroCargo__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_ingenieroCargo__c</fullName>
    <label>Ingeniero a cargo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>