salesforce_sfdx/main/default/objects/Activity/fields/OSFPE_fld_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adicional: Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>